--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -35,7 +35,7 @@ jobs:
     file: attendee-service-source/ci/tasks/package.yml
   - put: deploy-attendee-service
     params:
-      manifest: attendee-service-source/manifest.yml
+      manifest: ./manifest.yml
       path: package-output/attendee-service.jar
 
 - name: smoke_test
